2010-07-30  Rik <octave@nomad.inbox5.com>

	* Makefile.am: add .DOCSTRINGS to the DISTCLEANFILES list

2010-07-30  John W. Eaton  <jwe@octave.org>

	* pt-eval.cc (tree_evaluator::visit_if_command,
	tree_evaluator::visit_switch_command): Also process breakpoints
	for the command (bug #30490).

2010-07-29  Ben Abbott <bpabbott@mac.com>

	* gl-render.cc: Transpose markers '^' and 'v'.

2010-07-29  John W. Eaton  <jwe@octave.org>

	* pt-bp.cc (tree_breakpoint::visit_if_command): Also allow
	breakpoint to be set on command, same as for switch, while, or
	do-until statments.
	* pt-select.h, pt-select.cc (tree_if_command::set_breakpoint,
	tree_if_command::delete_breakpoint, tree_switch_command::set_breakpoint,
	tree_switch_command::delete_breakpoint): Delete functions and decls.
	(bug #30490).

2010-07-29  Jaroslav Hajek  <highegg@gmail.com>

	* ov.cc (octave_value::subsref (..., const std::list<octave_lvalue> *)
	octave_value::do_multi_index_op (..., const std::list<octave_lvalue> *)): 
	New methods.
	* ov.h: Declare them.
	* ov-base.cc (octave_base_value::subsref (..., const std::list<octave_lvalue> *)
	octave_base_value::do_multi_index_op (..., const std::list<octave_lvalue> *)): 
	New methods.
	* ov-base.h: Declare them.
	* ov-usr-fcn.cc (octave_user_function::subsref (..., const std::list<octave_lvalue> *)
	octave_user_function::do_multi_index_op (..., const std::list<octave_lvalue> *)): 
	New virtual method overrides. Move code here.
	(octave_user_function::bind_automatic_vars): Add lvalue_list
	parameter. Bind automatic variable ".ignored.".
	(Fis_ignored_output): New defun.
	* ov-usr-fcn.h: Update decls.
	* pt-misc.cc (tree_parameter_list::initialize_undefined_elements):
	Skip warning if outputs are ignored.
	* pt-exp.cc (tree_expression::rvalue (..., const
	std::list<octave_lvalue> *)): New method overload.
	* pt-exp.h: Declare it.
	* pt-idx.cc (tree_index_expression::rvalue (..., const
	std::list<octave_lvalue> *)): New method override. Move code here.